Implemented comment modal
